; ModuleID = '/home/carl/AnghaBench/disque/deps/jemalloc/src/extr_chunk.c_chunk_boot.c'
source_filename = "/home/carl/AnghaBench/disque/deps/jemalloc/src/extr_chunk.c_chunk_boot.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@opt_lg_chunk = common dso_local global i32 0, align 4
@LG_CHUNK_DEFAULT = common dso_local global i32 0, align 4
@chunksize = common dso_local global i32 0, align 4
@PAGE = common dso_local global i32 0, align 4
@chunksize_mask = common dso_local global i32 0, align 4
@LG_PAGE = common dso_local global i32 0, align 4
@chunk_npages = common dso_local global i32 0, align 4
@have_dss = common dso_local global i64 0, align 8
@chunks_rtree = common dso_local global i32 0, align 4
@LG_SIZEOF_PTR = common dso_local global i32 0, align 4
@chunks_rtree_node_alloc = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @chunk_boot() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @opt_lg_chunk, align 4
  %3 = icmp ne i32 %2, 0
  br i1 %3, label %6, label %4

4:                                                ; preds = %0
  %5 = load i32, i32* @LG_CHUNK_DEFAULT, align 4
  store i32 %5, i32* @opt_lg_chunk, align 4
  br label %6

6:                                                ; preds = %4, %0
  %7 = call i32 @ZU(i32 1)
  %8 = load i32, i32* @opt_lg_chunk, align 4
  %9 = shl i32 %7, %8
  store i32 %9, i32* @chunksize, align 4
  %10 = load i32, i32* @chunksize, align 4
  %11 = load i32, i32* @PAGE, align 4
  %12 = icmp sge i32 %10, %11
  %13 = zext i1 %12 to i32
  %14 = call i32 @assert(i32 %13)
  %15 = load i32, i32* @chunksize, align 4
  %16 = sub nsw i32 %15, 1
  store i32 %16, i32* @chunksize_mask, align 4
  %17 = load i32, i32* @chunksize, align 4
  %18 = load i32, i32* @LG_PAGE, align 4
  %19 = ashr i32 %17, %18
  store i32 %19, i32* @chunk_npages, align 4
  %20 = load i64, i64* @have_dss, align 8
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %26

22:                                               ; preds = %6
  %23 = call i64 (...) @chunk_dss_boot()
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %26

25:                                               ; preds = %22
  store i32 1, i32* %1, align 4
  br label %38

26:                                               ; preds = %22, %6
  %27 = call i32 @ZU(i32 1)
  %28 = load i32, i32* @LG_SIZEOF_PTR, align 4
  %29 = add nsw i32 %28, 3
  %30 = shl i32 %27, %29
  %31 = load i32, i32* @opt_lg_chunk, align 4
  %32 = sub nsw i32 %30, %31
  %33 = load i32, i32* @chunks_rtree_node_alloc, align 4
  %34 = call i64 @rtree_new(i32* @chunks_rtree, i32 %32, i32 %33, i32* null)
  %35 = icmp ne i64 %34, 0
  br i1 %35, label %36, label %37

36:                                               ; preds = %26
  store i32 1, i32* %1, align 4
  br label %38

37:                                               ; preds = %26
  store i32 0, i32* %1, align 4
  br label %38

38:                                               ; preds = %37, %36, %25
  %39 = load i32, i32* %1, align 4
  ret i32 %39
}

declare dso_local i32 @ZU(i32) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i64 @chunk_dss_boot(...) #1

declare dso_local i64 @rtree_new(i32*, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
